# control-plane/src/domains/temp/temp.type.ts
@@ -1,0 +1,4 @@
+export interface TempLoginRequest {
+  username: string;
+  password: string;
+}
